Twenty Ten: prevent overflow for large, captioned images. Fixes #22820, props obenland.
git-svn-id: http://core.svn.wordpress.org/trunk@23478 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyten/style.css
+++ b/wp-content/themes/twentyten/style.css
@@ -832,6 +832,7 @@ img.aligncenter {
 }
 .wp-caption img {
 	margin: 5px 5px 0;
+	max-width: 622px; /* caption width - 10px */
 }
 .wp-caption p.wp-caption-text {
 	color: #777;
